@@ -201,6 +201,8 @@ POSSIBILITY OF SUCH DAMAGE.
 # define TORRENT_USE_POSIX_SEMAPHORE 1
 #endif // __APPLE__
 
+#define TORRENT_HAVE_MMAP 1
+
 #define TORRENT_HAS_FALLOCATE 0
 
 #if TORRENT_USE_DEFAULT_IO
@@ -233,6 +235,8 @@ POSSIBILITY OF SUCH DAMAGE.
 #  define TORRENT_USE_AIO 1
 # endif
 #endif
+
+#define TORRENT_HAVE_MMAP 1
 
 #if TORRENT_USE_AIO && !defined TORRENT_USE_AIO_SIGNALFD
 #define TORRENT_USE_AIO_SIGNALFD 1
@@ -298,6 +302,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #define TORRENT_USE_IFCONF 1
 #define TORRENT_HAS_SALEN 0
 #define TORRENT_HAS_SEM_RELTIMEDWAIT 1
+#define TORRENT_HAVE_MMAP 1
 
 #if TORRENT_USE_AIO
 # define TORRENT_USE_AIO_PORTS 1
@@ -453,6 +458,10 @@ inline int snprintf(char* buf, int len, char const* fmt, ...)
 
 #ifndef TORRENT_DEPRECATED
 #define TORRENT_DEPRECATED
+#endif
+
+#ifndef TORRENT_HAVE_MMAP
+#define TORRENT_HAVE_MMAP 0
 #endif
 
 #ifndef TORRENT_USE_MACH_SEMAPHORE
